# acrosort-tex

./: LICENSE  README.md  pyproject.toml
acrosort_tex/: sorter.py
examples/: List_Of_Abbreviations.tex  sorted_acronyms.tex
