[tool.poetry]
name = "acrosort_tex"
version = "0.1.0"
description = ""
authors = ["baniasbaabe <banias@hotmail.de>"]

[tool.poetry.dependencies]
python = "^3.8"
isort = "^5.12.0"
black = "^23.3.0"
rich = "^13.3.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
acrosort = 'acrosort_tex.sorter:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
